--- a/src/Checkout.css
+++ b/src/Checkout.css
@@ -18,7 +18,7 @@
     width: 60%;
 }
 .checkout_items {
-    background-color:rgb(30, 73, 118);
+    background-color: rgba(0, 30, 60);
     border-radius: 5px;
 }
 
