--- a/src/Home.css
+++ b/src/Home.css
@@ -32,9 +32,10 @@
     margin-top: 5%;
     margin-bottom: 5%;
     font-weight: 400;
-    background: linear-gradient(to right bottom, rgb(0, 127, 255), rgb(0, 89, 178) 120%);
+    background: rgba(0, 30, 60);
     border-bottom: 1px solid #fff;
-    border-radius: 50px;
+    border-radius: 30px;
+    color: #fff;
 }
 
 @media (max-width:768px) {
