--- a/src/Subtotal.css
+++ b/src/Subtotal.css
@@ -5,9 +5,10 @@
     width: 300px;
     height: 100px;
     padding: 20px;
-    border-color: #f5f5f5;
+    background-color: rgba(0,89,178);
+    border-color: rgb(0, 89, 178);
     border: 1px solid #dddddd;
-    border-radius: 3px;
+    border-radius: 5px;
 }
 
 .subtotal_gift {
@@ -20,8 +21,8 @@
 }
 
 .subtotal > button {
-    background:rgb(0, 89, 178);
-    border-radius: 2px;
+    background-color: rgba(0,89,178);
+    border-radius: 5px;
     width: 100%;
     height: 30px;
     font-size: 17px;
