Updated Responsive View

--- a/src/Footer.css
+++ b/src/Footer.css
@@ -1,6 +1,6 @@
-/* .footer {
+.footer {
     background-color: #0c002b;
-} */
+}
 .footer > .footer_text {
     text-align: center;
     color: #fff;
