--- a/src/CheckoutProduct.css
+++ b/src/CheckoutProduct.css
@@ -8,6 +8,12 @@
     padding-left: 50px
 }
 
+.checkoutProduct__delete {
+    padding: 0;
+    align-items: center;
+    text-align: center;
+}
+
 .checkoutProduct__info > button {
     background: rgb(0, 89, 178);
     border: 1px solid #fff;
@@ -18,6 +24,12 @@
     cursor: pointer;
     font-size: 15px;
     font-weight: 600;
+    text-align: center;
+    display: flex;
+}
+
+.checkoutProduct__info > button > p {
+    padding-top: 5px;
 }
 
 .checkoutProduct__image {
@@ -31,12 +43,19 @@
     display: flex;
     font-size: 20px;
     letter-spacing: 2px;
+    margin-bottom: 10px;
   }
+
+.checkoutProduct__price {
+    font-size: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
 
 .checkoutProduct__title {
     margin-top: 10px;
-    font-size: 25px;
-    font-weight: 700;
+    font-size: 30px;
+    font-weight: 600;
 }
 
 
@@ -58,6 +77,10 @@
           margin-bottom: 10px;
           font-size: 13px;
           font-weight: 500;
+      }
+      .checkoutProduct__info > button > p {
+          padding-right: 5px;
+          font-weight: 600;
       }
       .checkoutProduct__rating {
           font-size: 17px;
