--- a/src/Login.css
+++ b/src/Login.css
@@ -5,6 +5,7 @@
     flex-direction: column;
     align-items: center;
     color: #fff;
+    overflow-x: hidden;
 }
 
 .login__logo {
@@ -104,4 +105,7 @@
     .login__container h5 {
       font-size: 20px;
     }
+    .login__container > h1 {
+      text-align: center;
+  }
   }
