--- a/src/Register.css
+++ b/src/Register.css
@@ -5,6 +5,7 @@
     flex-direction: column;
     align-items: center;
     color: #fff;
+    overflow-x: hidden;
 }
 
 .register__logo {
@@ -100,5 +101,8 @@
     .register__container {
         margin-top: 15%;
         border: none;
+    }
+    .register__container > h1 {
+        align-items: center;
     }
   }
