--- a/src/Order.css
+++ b/src/Order.css
@@ -2,7 +2,8 @@
     padding: 40px;
     margin: 20px 0;
     border: 1px solid lightgray;
-    background-color: white;
+    background-color: rgb(0, 89, 178);
+    color: #fff;
     position: relative;
 }
 
@@ -18,7 +19,17 @@
   }
 
   @media (max-width: 768px) {
+    .order {
+      display: flex;
+      flex-direction: column;
+    }
     .order_id {
-      background: blue;
+      top: 45px;
+      margin-top: 30px;
+      left: 40px;
+      font-size: 12px;
+    }
+    .order_format {
+      margin-top: 30px;
     }
   }
