--- a/src/Register.css
+++ b/src/Register.css
@@ -7,7 +7,9 @@
     color: #fff;
     overflow-x: hidden;
 }
-
+.register__textBox {
+  background-color: rgb(0, 30, 60);
+}
 .register__logo {
     margin-top: 20px;
     margin-bottom: 20px;
@@ -42,12 +44,14 @@
 .register__container > form > input {
     height: 35px;
     margin-bottom: 10px;
-    background-color: white;
+    background-color: #0c002b;
     width: 97%;
+    border: 2px solid #fff;
+    color: #fff;
     outline: none;
     border-radius: 5px;
-    font-size: 20px;
-    font-weight: 700;
+    font-size: 17px;
+    font-weight: 500;
   }
 
   .register__inf {
@@ -60,15 +64,17 @@
     font-size: 12px;
 }
 
-.register__signInButton {
-    background: rgb(0, 89, 178);
+.login__signInButton {
+    background: #fff;
     border-radius: 5px;
     width: 100%;
     height: 40px;
     border: 1px solid;
+    color: rgb(0, 89, 178);
     margin-top: 10px;
-    border-color: #fff;
+    border-color: rgb(0, 78, 189);
     font-size: 20px;
+    font-weight: 500;
   }
 
   .register__registerButton {
@@ -86,15 +92,30 @@
       text-decoration: none;
       color: rgb(0, 89, 178);
   }
-  .register__signInWithGoogle {
+  .login__signInWithGoogle {
     border-radius: 5px;
     width: 100%;
     height: 40px;
     border: 1px solid;
     margin-top: 10px;
-    border-color: rgb(0, 89, 178);
+    border-color: #fff;
     font-size: 20px;
-    color: rgb(0, 89, 178);
+    color: #fff;
+    background-color: rgb(0, 89, 178);
+    cursor: pointer;
+  }
+
+  button p {
+    position: relative;
+    left: 0;
+    display: inline-block;
+    font-size: 20px;
+    margin-left: 10px;
+    top: -3px;
+    color: #fff;
+  }
+  .login__signinlogo {
+    color: #fff;
   }
 
   @media(max-width: 768px) {
