--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  background-color: #0c002b;
+  background-color: #222;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -16,4 +16,10 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+@media(max-width: 768px) {
+  body {
+      width: 100%;
+      overflow-x: auto;
+  }
 }
