--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -3,11 +3,12 @@
     height: 80px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     position: sticky;
     top: 0;
     z-index: 100;
-    border-bottom: 1px solid rgb(0, 89, 178);
-    background-color: #0c002b;
+    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
+    background-color: #222;
 }
 
 .header_logo
@@ -15,6 +16,7 @@
     width: 200px;
     object-fit: contain;
     margin: 0 20px;
+    color: #fff;
     margin-top: 0;
     border-radius: 10px;
 }
@@ -35,8 +37,8 @@
     color: #fff;
     font-weight: 700;
     padding-left: 20px;
-    background-color: rgb(0, 30, 60);
-    border: 1px solid rgb(0, 89, 178);
+    background-color: transparent;
+    border: 1px solid rgb(0, 89, 178);;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
 }
@@ -53,7 +55,7 @@
     height: 28px !important;
     color: #fff;
     border: 1px solid rgb(0, 89, 178);
-    background: rgb(0, 89, 178);
+    background: linear-gradient(rgba(124, 127, 255, 0) 0%, rgb(64, 221, 255) 300%);
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
 }
@@ -65,8 +67,7 @@
     margin-left: 15px;
     margin-right: 15px;
     color: #fff;
-    font-weight: 700;
-    border: 2px solid rgb(0, 89, 178);
+    font-weight: 800;
     padding: 5px 10px;
     border-top-right-radius: 5px;
     border-bottom-left-radius: 5px;
@@ -82,6 +83,28 @@
 .header__optionLineTwo
 {
     font-size: 20px;
+    font-weight: 800;
+}
+.header_optionLineButton {
+    position: relative;
+    padding: 10px;
+    font-size: 17px;
+    height: 38px !important;
+    color: #222;
+    border-radius: 5px;
+    cursor: pointer;
+    align-items: center;
+    text-transform: uppercase;
+    clip-path: polygon(12px 0px, 100% 0px, 100% 72%, calc(100% - 12px) 100%, 0px 100%, 0px 12px);
+    background: linear-gradient(90deg, rgb(255, 215, 77) 0%, rgb(64, 221, 255) 30%, rgb(124, 127, 255) 85%) 0% 0% / 200% 100%;
+}
+
+.header_navBar {
+    visibility: hidden;
+    opacity: 0;
+}
+.header_link {
+    text-decoration: none;
 }
 .header_optionBasket
 {
@@ -138,53 +161,12 @@
     visibility: visible;
   }
 @media (max-width: 768px) {
-    .header {
-        height: 200px;
-        display: block;
-        overflow-x: hidden;
-        align-items: center;
+    .header, .header_nav {
+        display: flex;
+        flex-direction: column;
     }
     .header_logo {
-        position: relative;
-        width: 200px;
-        margin: 10px;
-        object-fit: contain;
-        margin: 0 20px;
-        margin-left: 20%;
+        align-self: center;
         margin-top: 20px;
-    }
-    .header_searchInput {
-        margin-left: 10px;
-        width: 80%;
-    }
-    .header_searchIcon {
-        margin-right: 10px  ;
-    }
-    .header_option {
-        display: flex;
-        margin-left: 5px;
-        margin-right: 5px;
-        margin-top: 20px;
-        color: #fff;
-        font-weight: 500;
-        border: 1px solid rgb(0, 89, 178);
-        padding: 5px 7px;
-        border-radius: 5px;
-    }
-    .header_optionLineOne
-    {
-        font-size: 7px;
-    }
-    .header__optionLineTwo
-    {
-        font-size: 15px;
-    }
-    .header_option:hover .tooltiptext {
-        visibility: hidden;
-    }
-    .header_option a:visited {
-        background-color: transparent;
-        outline: none;
-        text-decoration: none;
     }
 }
