--- a/src/Register/Register.css
+++ b/src/Register/Register.css
@@ -1,14 +1,15 @@
 .register {
-    background-color: #0c002b;
+    background-color: #222;
     height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     color: #fff;
     overflow-x: hidden;
+    font-family: 'JetBrains Mono', monospace;
 }
 .register__textBox {
-  background-color: rgb(0, 30, 60);
+  background-color: transparent;
 }
 .register__logo {
     margin-top: 20px;
@@ -44,7 +45,7 @@
 .register__container > form > input {
     height: 35px;
     margin-bottom: 10px;
-    background-color: #0c002b;
+    background-color: #222;
     width: 97%;
     border: 2px solid #fff;
     color: #fff;
@@ -70,11 +71,12 @@
     width: 100%;
     height: 40px;
     border: 1px solid;
-    color: rgb(0, 89, 178);
+    color: #222;
     margin-top: 10px;
     border-color: rgb(0, 78, 189);
     font-size: 20px;
     font-weight: 500;
+    clip-path: polygon(12px 0px, 100% 0px, 100% 72%, calc(100% - 12px) 100%, 0px 100%, 0px 12px);
   }
 
   .register__registerButton {
@@ -86,6 +88,7 @@
     border-color: rgb(0, 89, 178);
     font-size: 20px;
     color: rgb(0, 89, 178);
+    clip-path: polygon(12px 0px, 100% 0px, 100% 72%, calc(100% - 12px) 100%, 0px 100%, 0px 12px);
   }
 
   .register__registerButton a {
@@ -93,15 +96,15 @@
       color: rgb(0, 89, 178);
   }
   .login__signInWithGoogle {
-    border-radius: 5px;
     width: 100%;
     height: 40px;
     border: 1px solid;
     margin-top: 10px;
     border-color: #fff;
     font-size: 20px;
-    color: #fff;
-    background-color: rgb(0, 89, 178);
+    color: #222;
+    clip-path: polygon(12px 0px, 100% 0px, 100% 72%, calc(100% - 12px) 100%, 0px 100%, 0px 12px);
+    background: linear-gradient(90deg, rgb(255, 215, 77) 0%, rgb(64, 221, 255) 30%, rgb(124, 127, 255) 85%) 0% 0% / 200% 100%;
     cursor: pointer;
   }
 
@@ -112,10 +115,12 @@
     font-size: 20px;
     margin-left: 10px;
     top: -3px;
-    color: #fff;
+    color: #222;
   }
+
   .login__signinlogo {
-    color: #fff;
+    color: #222;
+    background: transparent;
   }
 
   @media(max-width: 768px) {
