--- a/src/Subtotal/Subtotal.css
+++ b/src/Subtotal/Subtotal.css
@@ -4,31 +4,40 @@
     justify-content: space-between;
     width: 300px;
     height: 100px;
-    padding: 20px;
-    background-color: rgba(0,89,178);
-    border-color: rgb(0, 89, 178);
-    border: 1px solid #dddddd;
-    border-radius: 5px;
+    padding: 24px 32px;
+    transition: all 0.2s ease 0s;
+    background: linear-gradient(rgba(124, 127, 255, 0) 0%, rgb(64, 221, 255) 300%);
+    border: 1px solid rgb(64, 221, 255);
+    box-shadow: rgb(64 221 255) 0px 0px 8px;
+    border-radius: 24px;
 }
 
 .subtotal_gift {
     display: flex;
     align-items: center;
+    background: transparent;
 }
 
+strong {
+    background: transparent;
+}
 .subtotal_gift > input {
     margin-right: 5px;
 }
 
 .subtotal > button {
-    background-color: rgba(0,89,178);
     border-radius: 5px;
     width: 100%;
     height: 30px;
     font-size: 17px;
     border: 1px solid #fff;
     margin-top: 10px;
-    color: #fff;
+    color: rgb(23, 15, 30);
+    box-shadow: rgba(255, 215, 77, 0.6) -1px -1px 6px, rgba(124, 127, 255, 0.6) 1px 1px 6px;
+    font-weight: 700;
+    background: linear-gradient(160deg, rgb(255, 215, 77) 0%, rgb(64, 221, 255) 30%, rgb(124, 127, 255) 85%) 0% 0% / 100% 100%;
+    border-radius: 10px;
+    transition: transform 0.2s ease 0s;
 }
 
 @media(max-width:768px) {
