--- a/src/Header/HeaderClose.css
+++ b/src/Header/HeaderClose.css
@@ -23,7 +23,7 @@
     display: flex;
     flex-direction: row;
 }
-.header_logo .menu {
+.header_logo button {
     visibility: hidden;
 }
 .header_search
@@ -170,7 +170,6 @@
     .header {
         display: flex;
         flex-direction: column;
-        height: 80px;
     }
     .header_nav {
         visibility: hidden;
